--- a/admin-panel/requirements.txt
+++ b/admin-panel/requirements.txt
@@ -1,7 +1,8 @@
-Django==3.0.5
+django
 django-widget-tweaks==1.4.8
 sqlparse==0.3.1
 xhtml2pdf
 LooseVersion
-mysql-python
-ConfigParser
+configparser
+virtualenv
+setuptools
