--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,55 @@
+arabic-reshaper==3.0.0
 asgiref==3.8.1
-Django==4.2.11
-mysql-connector-python==8.3.0
+asn1crypto==1.5.1
+certifi==2024.2.2
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+configparser==7.0.0
+cryptography==42.0.7
+cssselect2==0.7.0
+cx_Oracle==8.3.0
+distlib==0.3.8
+Django==3.2
+django-widget-tweaks
+filelock==3.14.0
+html5lib==1.1
+idna==3.7
+looseversion==1.3.0
+lxml==5.2.2
+mssql-django==1.5
+mysql-connector-python==8.4.0
 mysqlclient==2.2.4
-psycopg2==2.9.9
-PyMySQL==1.1.0
-sqlparse==0.4.4
-typing_extensions==4.10.0
-
-
-numpy==1.26.4
-opencv-python==4.9.0.80
+oscrypto==1.3.0
 pillow==10.3.0
-pytesseract==0.3.10
-imutils==0.5.4
-scikit-image==0.22.0
+platformdirs==4.2.2
+pycparser==2.22
+pyHanko==0.25.0
+pyhanko-certvalidator==0.26.3
+PyMySQL==1.1.1
+pyodbc==5.1.0
+pypdf==4.2.0
+pypng==0.20220715.0
+python-bidi==0.4.2
+pytz==2024.1
+PyYAML==6.0.1
+qrcode==7.4.2
+reportlab==4.0.9
+requests==2.31.0
+setuptools==69.5.1
+six==1.16.0
+sqlparse==0.3.1
+svglib==1.5.1
+tinycss2==1.3.0
+typing_extensions==4.11.0
+tzlocal==5.2
+uritools==4.0.2
+urllib3==2.2.1
+virtualenv==20.26.2
+webencodings==0.5.1
+xhtml2pdf==0.2.15
+scikit-image
+opencv-python
+pytesseract
+imutils
